--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+      <title>JavaScript &amp; jQuery - Chapter 2: Basic JavaScript Instructions - Example</title>
+      <link rel="stylesheet" href="css/c02.css" />
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>Elderflower</h1>
+      <div id="content">
+        <div id="greeting" class="message">Hello!</div>
+        <table>
+          <tr>
+            <td>Custom Sign: </td>
+            <td id="userSign"></td>
+          </tr>
+          <tr>
+            <td>Total tiles: </td>
+            <td id="tiles"></td>
+          </tr>
+          <tr>
+            <td>Subtotal: </td>
+            <td id="subTotal"></td>
+          </tr>
+          <tr>
+            <td>Shipping: </td>
+            <td id="shipping"></td>
+          </tr>
+          <tr>
+            <td>Grand total: </td>
+            <td id="grandTotal"></td>
+          </tr>
+        </table>
+        <a href="#" class="action">Pay Now</a>
+      </div>
+      <script src="js/example.js"></script>
     </body>
 </html>
