--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>JavaScript &amp; jQuery - Chapter 2: Basic JavaScript Instructions - Example</title>
-      <link rel="stylesheet" href="css/c02.css" />
+      <link rel="stylesheet" href="./assets/css/c02.css" />
     </head>
     <body>
       <h1>Elderflower</h1>
@@ -32,6 +32,6 @@
         </table>
         <a href="#" class="action">Pay Now</a>
       </div>
-      <script src="js/example.js"></script>
+      <script src="./assets/js/example.js"></script>
     </body>
 </html>
